pontoon/base/static/css/translate.css
/* ... */
.ui-datepicker .ui-datepicker-header .ui-corner-all.ui-datepicker-next span:before {
  content: "";
}

#ui-datepicker-div table {
  margin-bottom: 20px;
}

#ui-datepicker-div th {
  color: #7BC876;
  font-weight: normal;
  text-transform: uppercase;
}

#ui-datepicker-div td a,
#ui-datepicker-div td.ui-state-disabled span {
  background: transparent;
  border-color: transparent;
  color: #AAAAAA;
  text-align: center;
  width: 21px;
}

#ui-datepicker-div td a.ui-state-hover {
  border-color: #525A65;
}

#ui-datepicker-div td a.ui-state-highlight,
#ui-datepicker-div td.ui-datepicker-today span {
  border-color: #FED271;
}

#ui-datepicker-div td a.ui-state-active {
  border-color: #7BC876;
  color: #7BC876;
}

#ui-datepicker-div td.ui-state-disabled {
  opacity: 1;
}

#ui-datepicker-div td.ui-state-disabled span {
  color: #555555;
}

#ui-datepicker-div .ui-widget-content {
  border: none;
}

#filter .menu li.author {
  height: 48px;
  padding-left: 4px;
  white-space: nowrap;
}

#filter .menu li.author figure {
  height: 100%;
}

#filter .menu li.author img {
  vertical-align: top;
}

#filter .menu li.author figcaption {
  display: inline-block;
  padding: 2px 0 2px 56px;
}

#filter .menu li.author .name {
  color: #FFFFFF;
  font-size: 16px;
  padding-bottom: 4px;
}

#filter .menu li.author .role {
  color: #AAAAAA;
}

#filter .menu li.author .sel {
  position: absolute;
}

#filter .menu li.author .status {
  display: none;
  height: 100%;
  left: 0;
  margin: 0;
  padding: 16px 0 0;
  text-align: center;
  top: 0;
  width: 100%;
  z-index: 1;

  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

#filter .menu li.author .status:before {
  color: #AAAAAA;
}


#filter .menu li.author.selected .status,
#filter .menu li.author .sel:hover .status {
  display: block;
}

#filter .menu li.author.selected img,
#filter .menu li.author .sel:hover img {
  opacity: 0.3;
}

#filter .toolbar {
  background: #111111;
  display: none;
  border-top: 1px solid #5E6475;
  line-height: 23px;
  padding: 10px 12px;
  text-transform: uppercase;
  width: 100%;

  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

#filter.fixed .toolbar {
  position: fixed;
  bottom: 0;
  width: 350px;
  z-index: 10;
}

#filter .clear-selection {
  float: left;
}

#filter .apply-selected {
  float: right;
  text-align: right;
}

#filter .apply-selected:hover, #filter .apply-selected .applied-count {
  color: #7BC876;
}

#filter .apply-selected .variant .plural,
#filter .apply-selected .variant.plural .singular {
  display: none;
}

#filter .apply-selected .variant.plural .plural {
  display: inline;
}

#filter .menu li .status {
  left: 4px;
  top: 4px;
}

#filter .menu li.all .status {
  left: 2px;
  top: 2px;
}

#filter .menu li.comments:not(.selected) .status,
#filter .menu li.unchanged:not(.selected) .status {
  left: 3px;
}

#filter .menu li.comments:not(.selected) .status:hover,
#filter .menu li.unreviewed:not(.selected) .status:hover,
#filter .menu li.unchanged:not(.selected) .status:hover {
  left: 4px;
}

/* Make selection area bigger and fit the entire row for easier use */
#filter .menu li .status {
  margin: -3px -13px -3px -16px;
  padding: 3px 13px 3px 16px;
  font-size: 16px;
}

#filter .menu li:not(.selected):not(.all) .status:not(.unselectable):hover:before {
  content: "";
}

#filter .menu li.selected .status:before {
  content: "";
}

#filter .menu li .count,
#filter .menu li .priority {
  position: absolute;
  right: 4px;
}

#filter .menu li .count {
  top: 4px;
}

#filter .menu li .priority {
  top: 6px;
}

#filter .menu li .priority .fa-star {
  float: left;
}

#filter .menu li.author .count {
  top: 8px;
}

#filter .menu li.hover .count {
  background: #4D5967;
  color: #CCCCCC;
}

#entitylist > .wrapper {
  bottom: 0;
  overflow-y: auto;
  position: absolute;
  top: 55px;
  width: 100%;
}

#entitylist > .wrapper > ul {
  background: #EBEBEB;
  margin: 0;
  list-style: none;
  text-align: left;
}

#entitylist > .wrapper > ul > li {
  background: #3f4752;
  color: #FFFFFF;
  cursor: pointer;
  line-height: 2em;
  padding: 10px 30px 10px 43px;
  position: relative;
}

#entitylist > .wrapper > ul > li:hover,
#entitylist > .wrapper > ul > li.hovered,
#entitylist > .wrapper > ul > li.active,
#entitylist > .wrapper > ul > li.selected {
  background-color: #4D5967;
}

#entitylist > .wrapper > ul > li .arrow {
  color: #CCCCCC;
  float: right;
  margin: -33px -15px;
  display: none;
}

#entitylist > .wrapper > ul > li:hover .arrow {
  display: block;
}

/* Make selection area bigger and fit the entire row for easier use */
#entitylist > .wrapper > ul > li > .status {
  margin: -13px -13px -13px -16px;
  padding: 13px 13px 41px 16px;
  font-size: 16px;
}

#entitylist > .wrapper > ul > li:not(.selected) > .status:not(.unselectable):hover:before {
  content: "";
}

#entitylist > .wrapper > ul > li.selected > .status:before {
  content: "";
}

#entitylist > .wrapper > ul > li p {
  line-height: 20px;
}

#entitylist > .wrapper > ul > li p span {
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

#entitylist > .wrapper > ul > li p span.translation-string {
  color: #AAAAAA;
  display: inline-block;
  height: 20px;
  text-align: start;
}

#entitylist > .wrapper > ul > li p span.translation-string.open-sans {
  font-style: italic;
}

#entitylist > .wrapper > ul > li p span.translation-string[lang="mk"],
#entitylist > .wrapper > ul > li p span.translation-string[lang="sr"] {
  font-family: "Ubuntu Regular";
}

#entitylist > .wrapper > ul > li.translated p span.source-string,
#entitylist > .wrapper > ul > li.fuzzy p span.source-string,
#entitylist > .wrapper > ul > li.errors p span.source-string,
#entitylist > .wrapper > ul > li.warnings p span.source-string,
#entitylist > .wrapper > ul > li.missing.has-translations p span.source-string,
#entitylist > .wrapper > ul > li.partial p span.source-string {
  display: inline-block;
}
/* ... */

